# TtiGoneChat

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
TtiGoneChat/: CMakeLists.txt
TtiGoneChat/lib_base/: CMakeLists.txt
TtiGoneChat/lib_base/base/: basic_pch.h  basic_types.h  debug_log.cpp  debug_log.h  flags.h  integration.cpp  integration.h  invoke_queued.h  singleton.h  timer.cpp  timer.h
TtiGoneChat/lib_storage/: CMakeLists.txt
TtiGoneChat/lib_storage/storage/: storage_databases.cpp  storage_databases.h  storage_pch.h
TtiGoneChat/lib_ui/: CMakeLists.txt
TtiGoneChat/lib_ui/ui/: abstract_button.cpp  abstract_button.h  click_handler.cpp  click_handler.h  mb_widget.cpp  mb_widget.h  ui_pch.h  ui_utility.cpp  ui_utility.h
TtiGoneChat/lib_ui/ui/effects/: animation_value.cpp  animation_value.h
TtiGoneChat/lib_ui/ui/platform/: platform_window.cpp  platform_window.h
TtiGoneChat/lib_ui/ui/platform/win/: win_window.cpp  win_window.h
TtiGoneChat/lib_ui/ui/style/: style_core_types.h  style_font.cpp  style_font.h
TtiGoneChat/lib_ui/ui/text/: text.cpp  text.h  text_entity.cpp  text_entity.h
TtiGoneChat/lib_ui/ui/widgets/: buttons.cpp  buttons.h  labels.cpp  labels.h  mb_window.cpp  mb_window.h  message_textedit.cpp  message_textedit.h  popup_menu.cpp  popup_menu.h  snack_bar.cpp  snack_bar.h
TtiGoneChat/lib_ui/ui/widgets/fields/: customize_edit.cpp  customize_edit.h  customize_fields.cpp  customize_fields.h
TtiGoneChat/res/: TtigoneChat.qrc  day-custom.qss
TtiGoneChat/res/qrc/: Ttigone.qrc  TtigoneChat.qrc  telegram.qrc
TtiGoneChat/res/themes/: dark-style.qss
TtiGoneChat/res/ui/icons/chat/: T_Chat.qrc
TtiGoneChat/src/: app.cpp  app.h  config.cpp  config.h  main.cpp  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h  settings.cpp  settings.h  stdafx.h
TtiGoneChat/src/core/: application.cpp  application.h  base_intergration.cpp  base_intergration.h  launcher.cpp  launcher.h  sandbox.cpp  sandbox.h  settings.cpp  settings.h  tray.cpp  tray.h
TtiGoneChat/src/data/: data_document.cpp  data_document.h  data_history_message.cpp  data_history_message.h  data_msg_id.cpp  data_msg_id.h  data_session_label.cpp  data_session_label.h  data_talk.cpp  data_talk.h  data_talk_id.cpp  data_talk_id.h  data_talk_init.cpp  data_talk_init.h
TtiGoneChat/src/history/: history_widget.cpp  history_widget.h
TtiGoneChat/src/lang/: lang_translator.cpp  lang_translator.h
TtiGoneChat/src/layout/: horizontal_layout.cpp  horizontal_layout.h  vertical_layout.cpp  vertical_layout.h
TtiGoneChat/src/local/: account.cpp  account.h  domain.cpp  domain.h  session.cpp  session.h  user_account.cpp  user_account.h
TtiGoneChat/src/media/view/: open_common.h  overlay_widget.cpp  overlay_widget.h
TtiGoneChat/src/proto/: config.cpp  config.h  instance.cpp  instance.h  sender.h
TtiGoneChat/src/settings/: common.h  common_session.h  settings_type.h
TtiGoneChat/src/settings/databases/: config.ini
TtiGoneChat/src/storage/: connection_pool.cpp  connection_pool.h  history_storage.cpp  history_storage.h  local_storage.cpp  local_storage.h  session_storage.cpp  session_storage.h
TtiGoneChat/src/ui/: set_style.cpp  set_style.h
TtiGoneChat/src/ui/chat/: chat_item.cpp  chat_item.h  message_bubble.cpp  message_bubble.h
TtiGoneChat/src/ui/controls/: common_button.cpp  common_button.h  conner_button.cpp  conner_button.h  words_button.cpp  words_button.h
TtiGoneChat/src/ui/widgets/: button.cpp  button.h  button_p.h  mb_window.cpp  mb_window.h  self_window.cpp  self_window.h  windowbar.cpp  windowbar.h  windowbar_button.cpp  windowbar_button.h  windowbar_button_p.h  windowbar_p.h
TtiGoneChat/src/ui/widgets/fields/: auto_complete_input_field.cpp  auto_complete_input_field.h  completer_field.cpp  completer_field.h
TtiGoneChat/src/window/: controller.cpp  controller.h  launcher.cpp  launcher.h  mainwindow.cpp  mainwindow.h  session_controller.cpp  session_controller.h  sidebar.cpp  sidebar.h  window_config.json  window_main_menu.cpp  window_main_menu.h  window_media_preview.cpp  window_media_preview.h  window_session_menu.cpp  window_session_menu.h  window_stack.cpp  window_stack.h
TtiGoneChat/src/window/themes/: window_theme.cpp  window_theme.h
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/TtiGoneChat/: cmake_install.cmake
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/TtiGoneChat/TtiGoneChat_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/TtiGoneChat/TtiGoneChat_autogen/AHE2M5SVIX/: qrc_Ttigone.cpp  qrc_telegram.cpp
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/TtiGoneChat/TtiGoneChat_autogen/BNQTDUCTL2/: moc_qtmaterialcheckable.cpp  moc_qtmaterialcheckable.cpp.d  moc_qtmaterialcheckable_internal.cpp  moc_qtmaterialcheckable_internal.cpp.d  moc_qtmaterialoverlaywidget.cpp  moc_qtmaterialoverlaywidget.cpp.d  moc_qtmaterialripple.cpp  moc_qtmaterialripple.cpp.d  moc_qtmaterialrippleoverlay.cpp  moc_qtmaterialrippleoverlay.cpp.d  moc_qtmaterialstatetransition.cpp  moc_qtmaterialstatetransition.cpp.d  moc_qtmaterialstyle.cpp  moc_qtmaterialstyle.cpp.d  moc_qtmaterialtheme.cpp  moc_qtmaterialtheme.cpp.d
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/TtiGoneChat/TtiGoneChat_autogen/PNK5WDWK6L/: qrc_TtigoneChat.cpp
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/TtiGoneChat/TtiGoneChat_autogen/PRMOGMWJPH/: moc_application.cpp  moc_application.cpp.d
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/TtiGoneChat/lib_base/: cmake_install.cmake
build-TtiGoneChat-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/cmake/: cmake_install.cmake
cmake/: init_target.cmake  nice_target_sources.cmake  version.cmake
uml/: TtiGoneChat.vpp.bak_000f  TtigoneChat.mdj
(+93 files in other folders)
